manifests/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-api-service
  namespace: app
  labels:
    app: app-api
spec:
  type: NodePort
  selector:
    app: app-api
  ports:
    - port: 80
      targetPort: 8080
